[tool.poetry]
name = "studyfam"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
discord = "^1.0.1"
pymongo = "^3.11.1"
dnspython = "^2.0.0"
aiohttp = "^3.7.3"
Pillow = "^8.1.2"
multidict = "^5.1.0"
chardet = "^4.0.0"
yarl = "^1.6.3"
deep-translator = "^1.4.2"
soupsieve = "^2.2.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
